--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
