--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,4 @@
-@import "../../styles//sass/abstracts/media-queries";
-@import "../../styles//sass/abstracts/mixins";
+@import "../../styles/style.scss";
 
 .navbar {
   flex: 1;
