--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,4 @@
-@import "../../styles/sass/abstracts/media-queries";
-@import "../../styles/sass/abstracts/mixins";
+@import "../../styles/style.scss";
 
 .header {
   width: 100%;
