--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,5 @@
 @import "./sass/base/reset";
 @import "./sass/base/base";
+@import "./sass/abstracts/variables";
+@import "./sass/abstracts/media-queries";
+@import "./sass/abstracts/mixins";
