feat: add homepage

--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -8,3 +8,11 @@ $neutral-light-color: #fff;
 $border-radius-sm: 5px;
 $border-radius-md: 10px;
 $border-radius-lg: 25px;
+
+/* FONT SIZE */
+$text-xs: 0.75rem;
+$font-sm: 0.875rem;
+$text-base: 1rem;
+$text-lg: 1.125rem;
+$text-xl: 1.25rem;
+$text-2xl: 1.5rem;
