feat: add about page

--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $border-radius-lg: 25px;
 
 /* FONT SIZE */
 $text-xs: 0.75rem;
-$font-sm: 0.875rem;
+$text-sm: 0.875rem;
 $text-base: 1rem;
 $text-lg: 1.125rem;
 $text-xl: 1.25rem;
