--- a/src/pages/Housing/Housing.scss
+++ b/src/pages/Housing/Housing.scss
@@ -20,12 +20,42 @@
 }
 
 .housing-picture {
+  margin: auto;
   img {
     width: 100%;
+    max-height: 300px;
     aspect-ratio: 1;
     object-fit: cover;
     border-radius: $border-radius-md;
+    @include md-screen {
+      max-height: none;
+      aspect-ratio: 16/9;
+    }
+    @include xl-screen {
+      max-height: 400px;
+    }
   }
+}
+
+.housing-information-rate-container {
+  @include flex-container($direction: column);
+  gap: 1rem;
+  width: 100%;
+
+  @include md-screen {
+    @include flex-container(
+      $direction: row,
+      $justify: space-between,
+      $align: center
+    );
+  }
+}
+
+.housing-information-tag-container {
+  @include flex-container($direction: column, $justify: space-between);
+  height: 100%;
+  flex: 1;
+  gap: 1rem;
 }
 
 .housing-information {
@@ -35,15 +65,21 @@
     margin-bottom: 0.5rem;
     color: $main-color;
     font-size: $text-lg;
+    @include xl-screen {
+      font-size: $text-2xl;
+    }
   }
   &-location {
     display: block;
     font-size: $text-sm;
+    @include xl-screen {
+      font-size: $text-lg;
+    }
   }
 }
 
 .housing-tag-container {
-  @include flex-container($align: center);
+  @include flex-container($align: center, $wrap: wrap);
   width: 100%;
   gap: 1rem;
 }
@@ -55,20 +91,37 @@
   font-weight: 700;
   color: $neutral-light-color;
   background-color: $main-color;
+
+  @include xl-screen {
+    font-size: $text-sm;
+  }
 }
 
 .housing-rate-host-container {
   @include flex-container($justify: space-between, $align: center);
   width: 100%;
+  flex: 1;
+  @include md-screen {
+    @include flex-container($direction: column-reverse, $align: flex-end);
+    height: 100%;
+  }
+  @include lg-screen {
+    gap: 1rem;
+  }
 }
 
 .housing-rate-container {
   @include flex-container($align: center);
   flex: 1;
-  width: 100%;
   gap: 0.5rem;
+
   .housing-rate {
-    width: 1rem;
+    width: 1.5rem;
+
+    @include lg-screen {
+      width: 1.75rem;
+    }
+
     &-active {
       & path {
         fill: $main-color;
@@ -80,9 +133,18 @@
 .housing-host {
   @include flex-container($justify: flex-end, $align: center);
   flex: 1;
-  gap: 0.75rem;
+  gap: 0.375rem;
+
+  @include md-screen {
+    gap: 0.75rem;
+  }
+
   &-picture {
     width: 3.5rem;
+
+    @include lg-screen {
+      width: 4rem;
+    }
 
     img {
       width: 100%;
@@ -97,5 +159,18 @@
     display: block;
     max-width: 33%;
     color: $main-color;
+    font-size: $text-sm;
+    @include lg-screen {
+      font-size: $text-base;
+    }
+  }
+}
+
+.housing-collapse-container {
+  @include flex-container($direction: column, $align: center);
+  gap: 1rem;
+  @include lg-screen {
+    @include flex-container($direction: row, $align: flex-start);
+    gap: 4rem;
   }
 }
