chore: rename classes to prevent side effect

--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,6 +1,6 @@
 @import "../../styles/style.scss";
 
-.container {
+.about {
   @include flex-container($direction: column, $align: center);
   width: 100%;
   height: 100%;
