--- a/src/pages/Housing/Housing.scss
+++ b/src/pages/Housing/Housing.scss
@@ -1,6 +1,6 @@
 @import "../../styles/style.scss";
 
-.container {
+.housing {
   @include flex-container($direction: column, $align: center);
   width: 100%;
   height: 100%;
