chore: fix style

--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -49,7 +49,7 @@
   transform: translateX(-50%);
   color: $neutral-light-color;
   font-size: $text-lg;
-  @include lg-screen {
+  @include md-screen {
     display: block;
   }
 }
